// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskItem.vue renders correctly and matches the snapshot 1`] = `
<li
  class="taskItem"
  data-id="1"
  draggable="true"
>
  <div
    class="taskWrapper"
  >
    <input-checkbox-stub
      checked="false"
      disabled="false"
      id="1"
    />
    <div
      class="taskDescription"
    >
      <span
        class="taskTitle"
      >
        Task 1
      </span>
      <app-button-stub
        customclass="deleteButton"
        isactive="false"
      />
    </div>
  </div>
</li>
`;

exports[`TaskItem.vue renders with checked state 1`] = `
<li
  class="taskItem taskCompleted"
  data-id="1"
  draggable="true"
>
  <div
    class="taskWrapper"
  >
    <input-checkbox-stub
      checked="true"
      disabled="false"
      id="1"
    />
    <div
      class="taskDescription"
    >
      <span
        class="taskTitle"
      >
        Task 1
      </span>
      <app-button-stub
        customclass="deleteButton"
        isactive="false"
      />
    </div>
  </div>
</li>
`;
